--- a/personal_website/staticFiles/css/home.css
+++ b/personal_website/staticFiles/css/home.css
@@ -3,6 +3,7 @@
 }
 #profile-wrapper {
     text-align: center;
+    min-width: 180px;
 }
 h3 {
     text-transform: uppercase;
@@ -13,6 +14,7 @@ h3, h4, h6, p {
 }
 #profile-pic {
     width: 80%;
+    max-width: 200px;
     height: auto;
     border-radius: 50%;
     margin-left: auto;
@@ -51,12 +53,37 @@ h3, h4, h6, p {
     align-items: center;
     justify-items: center;
     grid-template-areas:
-        "header header header"
-        "project1 project2 project3"
-        "footer footer footer";
+        "project1 project2 project3";
+}
+@media screen and (max-width: 1199px) {
+    .project-grid-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 0;
+        grid-row-gap: 0%;
+        align-items: center;
+        justify-items: center;
+        grid-template-areas:
+        "project1 project2"
+        "project3 project3";
+    }
+}
+@media screen and (max-width: 780px) {
+    .project-grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-column-gap: 0;
+        grid-row-gap: 1%;
+        align-items: center;
+        justify-items: center;
+        grid-template-areas:
+        "project1"
+        "project2"
+        "project3";
+    }
 }
 .projects-header {
-    grid-area: header;
+    text-align: center;
 }
 .projects-header h4 {
     font-size: 28px;
@@ -70,7 +97,7 @@ h3, h4, h6, p {
 }
 .project-container {
     grid-area: project1;
-    min-width: 200px;
+    width: 300px;
     display: grid;
     grid-template-areas:
         "image"
