--- a/personal_website/base/templates/base/home.html
+++ b/personal_website/base/templates/base/home.html
@@ -47,7 +47,7 @@
                     <p>{{ aboutMe.aboutMe1 }}</p>
                     <p>{{ aboutMe.aboutMe2 }}</p>
                     {% endfor %}
-                    <h3>TEST</h3>
+                    <h3>SOCIALS</h3>
                     <hr>
                     <ul class="social-links">
                         <li>
